fix selection out of bounds, fix palette wrap

--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ tr:hover td {
   padding: 2px;
   align-items: flex-start;
   position: relative;
+  flex-flow: row wrap;
+  max-width: 100%;
 }
 
 .group {
@@ -207,6 +209,7 @@ tr:hover td {
 
 #palette > .add {
   margin: 4px;
+  min-width: 32px;
 }
 
 #palette > .add::before {
